# Code

./: .gitignore  LICENSE  README.md
CCode/: CMakeLists.txt  ReadWave.c  ReadWave.h
CCode/include/: fftTrans.h  filterTrans.h  hilbertTrans.h
CCode/src/: fftTrans.c  filterTrans.c  hilbertTrans.c  main.c
CPlusPlus/: CMakeLists.txt
CPlusPlus/Header/: reverseOrder.h
CPlusPlus/include/: arrayPig.h  bubbleSort.h  peopleSort.h  teacherStudent.h  twoArrayStruct.h  twoDimensionArray.h
CPlusPlus/src/: Hello.cpp  arrayPig.cpp  bubbleSort.cpp  cal.cpp  guessNumber.cpp  main.cpp  multiplicationTable.cpp  narcissusNumber.cpp  outputStar.cpp  peopleSort.cpp  reverseOrder.cpp  sevennumber.cpp  teacherStudent.cpp  twoArrayStruct.cpp  twoDimensionArray.cpp
Python/: DeepSeek.py  FileOpt.py  config_kd.ini  test.py  test_http.py  y8_clientFA.py  y8_serverFA.py
Python/FastAPI/: FastDemo.py
Python/Flask/: FlaskDemo.py
Python/Gradio/: Gr_Blocks.py  Gr_yolo.py  GradioDemo.py
Python/tool/: dxbdTool.py  pointDetection.py  v8Detection.py
